<resources>
    <string name="app_name">BudgetTracker</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="unit_measurment">Unit of Measurment</string>
    <string name="Category">Category</string>
    <string name="Subcategory">Sub category</string>
    <string name="item_date">Inventory as created on</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_value">Value</string>
    <string name="item_cost">Cost</string>
    <string name="item_image">Inventory image</string>
    <string name="dialog_1">Add Units of Measure</string>
    <string name="dialog_2">Add Item Category/SubCategory</string>
    <string name="dialog_3">Modify Item Category/SubCategory</string>
    <string name="dialog_4">Delete Item Category/SubCategory</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="unit_name">Unit Name</string>
    <string name="symbol">Symbol</string>
    <string name="add_category">Add Category</string>
    <string name="add_subctegory">Add Subcategory</string>
    <string name="modify_category">Modify Category</string>
    <string name="modify_subctegory">Modify Subcategory</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_subctegory">Delete Subcategory</string>
    <string name="item_category">Item Category</string>
    <string name="item_sub_category">Item SubCategory</string>
    <string name="new_item_category">New Item Category name </string>
    <string name="new_item_sub_category">New Item SubCategory name </string>
    <string name="item_under_category">Under Category</string>

    <string name="company_name">Enter Company Name</string>
    <string name="financial_year">Financial year from</string>
    <string name="address">Address</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="tax_reg_1">Tax Registration No</string>
    <string name="tax_reg_2">Tax Registration No 2</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_signature">Company Signature</string>

    <string name="closing_inventory">Closing inventory As on</string>
    <string name="name">NAME</string>
    <string name="rate">RATE/UNIT</string>
    <string name="value">VALUE</string>>
    <string name="unit">UNIT</string>
    <string name="category">CATEGORY</string>
    <string name="created_date">CREATED DATE</string>
    <string name="subcategory">SUB CATEGORY</string>
    <string name="quantity">QUANTITY</string>
    <string name="cost">COST</string>
    <string name="no_unit">NO. OF UNITS</string>
    <string name="default1">DEFAULT</string>
    <string name="zero">0.00</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_summary">SummaryActivity</string>
</resources>
