<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:showDividers="middle">
        <LinearLayout
            android:id="@+id/layout_add_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            app:typeface="roboto_light" />
        />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            app:typeface="roboto_light" />
        />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_modify_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            app:typeface="roboto_light" />
        />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_delete_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_4"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:typeface="roboto_light" />
        />

        </LinearLayout>




    </LinearLayout>


</RelativeLayout>