<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <RadioGroup
        android:id="@+id/rg_cat_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category" />

        <RadioButton
            android:id="@+id/rb_subcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_subctegory" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_add_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.skytopper.budgettracker.customviews.BudgetTrackerTextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_category"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.skytopper.budgettracker.customviews.BudgetTrackerTextView
                android:id="@+id/text_under_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_under_category"
                android:textSize="16dp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_modify_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/layout_delete_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_category"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_modify_category"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_modify_category_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.skytopper.budgettracker.customviews.BudgetTrackerTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_item_category"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/edt_modify_category"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_modify_sub_category_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.skytopper.budgettracker.customviews.BudgetTrackerTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_sub_category"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spinner_modify_sub_category"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/layout_sub_delete"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.skytopper.budgettracker.customviews.BudgetTrackerTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_item_sub_category"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/edt_modify_sub_category"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:singleLine="true" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
